Fix squashed head

--- a/index.css
+++ b/index.css
@@ -758,8 +758,6 @@ a {
 
   .about-header img {
     border-radius: 50%;
-    width: 100%;
-    height: 25%;
     opacity: 0;
     transform: translateX(300px) rotateZ(120deg);
     transition: all 950ms cubic-bezier(0, 0.13, 0.76, 1.18);
